webinar lectors and programs add webinar lector table
